--- a/inventory/local/hosts.ini
+++ b/inventory/local/hosts.ini
@@ -1,3 +1,34 @@
+all: # keys must be unique, i.e. only one 'hosts' per group
+;     hosts:etcd-1: IP: 172.17.37.26
+; etcd-2: IP: 172.17.37.22
+; master-node-etcd-1: IP: 172.17.37.20
+; master-1: IP: 172.17.37.30
+; master-2: IP: 172.17.37.23
+; node-1: IP: 172.17.37.28
+; node-2: IP: 172.17.37.27
+        etcd1:
+        ;ansible_host=95.54.0.12  # ip=10.3.0.1 etcd_member_name=etcd1
+        etcd2:
+            host_var: value
+
+    vars:
+        group_all_var: value
+        #ansible_connection
+    children:   # key order does not matter, indentation does
+        etcd:
+            hosts:
+                etcd1:
+                etcd2:
+        kube-master:
+            hosts:
+                etcd1:
+                etcd2:
+        lube-nodeetcd:
+            hosts:
+                etcd1:
+                etcd2:
+
+
 node1 ansible_connection=local local_release_dir={{ansible_env.HOME}}/releases
 
 [kube-master]
